--- a/openApiDocs/beta/Financials.yml
+++ b/openApiDocs/beta/Financials.yml
@@ -38260,6 +38260,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
