--- a/openApiDocs/v1.0/Identity.Partner.yml
+++ b/openApiDocs/v1.0/Identity.Partner.yml
@@ -1609,7 +1609,7 @@ components:
           properties:
             displayName:
               type: string
-              description: The Azure AD display name of the customer tenant. Read-only. Supports $orderBy.
+              description: The Azure AD display name of the customer tenant. Read-only. Supports $orderby.
               nullable: true
             tenantId:
               type: string
@@ -1991,6 +1991,7 @@ components:
           type: string
         message:
           type: string
+          x-ms-primary-error-message: true
         target:
           type: string
           nullable: true
